# arcade

./: .gitignore  CMakeLists.txt  README.md
assets/: scores.txt
assets/images/: arcade_ncurses.txt
include/: Color.hpp  Enums.hpp  Errors.hpp  GlobalClasses.hpp  Libs.hpp  Tiles.hpp
include/Core/: CoreModule.hpp  ICoreModule.hpp  LdlWrapper.hpp  Menu.hpp
include/Entities/: AEntities.hpp  Entities.hpp  IEntities.hpp  Player.hpp
include/Entities/Background/: Background.hpp
include/Entities/Button/: Button.hpp
include/Entities/Empty/: Empty.hpp  EmptyEntity.hpp
include/Entities/Enemy/: Enemy.hpp
include/Entities/Fruit/: Fruit.hpp
include/Entities/Player/: Player.hpp
include/Entities/Player/PlayerBody/: PlayerBody.hpp
include/Entities/Player/PlayerHead/: PlayerHead.hpp
include/Entities/Player/PlayerTail/: PlayerTail.hpp
include/Entities/PlayerBody/: PlayerBody.hpp
include/Entities/PlayerHead/: PlayerHead.hpp
include/Entities/Projectile/: Projectile.hpp
include/Entities/Wall/: Wall.hpp
include/Games/: AGameModule.hpp  AGames.hpp  IGameModule.hpp  IGames.hpp  Tiles.hpp
include/Games/Centipede/: Centipede.hpp
include/Games/Menu/: Menu.hpp
include/Games/Nibbler/: Nibbler.hpp
include/Games/Snake/: Snake.hpp
include/GlobalClasses/: Ascii.hpp  Enums.hpp  Errors.hpp  Tiles.hpp
include/Graphics/: AGraphicalModule.hpp  IGraphicalModule.hpp
include/Graphics/Ncurses/: NcursesGraphicalModule.hpp  NcursesWrapper.hpp
include/Graphics/SDL2/: SDL2Wrapper.hpp  Sdl2GraphicalModule.hpp
include/Graphics/SFML/: SfmlGraphicalModule.hpp
src/Core/: CoreModule.cpp  LdlWrapper.cpp  Main.cpp  Menu.cpp
src/Entities/: AEntities.cpp  Entities.cpp  Player.cpp
src/Entities/Background/: Background.cpp
src/Entities/Button/: Button.cpp
src/Entities/Empty/: Empty.cpp
src/Entities/Enemy/: Enemy.cpp
src/Entities/Fruit/: Fruit.cpp
src/Entities/Player/: Player.cpp
src/Entities/Player/PlayerBody/: PlayerBody.cpp
src/Entities/Player/PlayerHead/: PlayerHead.cpp
src/Entities/Player/PlayerTail/: PlayerTail.cpp
src/Entities/PlayerBody/: PlayerBody.cpp
src/Entities/PlayerHead/: PlayerHead.cpp
src/Entities/Projectile/: Projectile.cpp
src/Entities/Wall/: Wall.cpp
src/Errors/: Errors.cpp  Errors.hpp
src/Games/: AGameModule.cpp  Tiles.hpp
src/Games/Centipede/: Centipede.cpp  Main.cpp
src/Games/Menu/: Menu.cpp
src/Games/Nibbler/: Main.cpp  Nibbler.cpp
src/Games/Nibbler/maps/: map1.txt  map10.txt  map2.txt  map4.txt  map5.txt  map6.txt  map7.txt  map8.txt  wave1.txt  wave2.txt  wave3.txt
src/Games/Snake/: Snake.cpp
src/Games/Snake/maps/: map1.txt
src/GlobalClasses/: Ascii.cpp  Tiles.cpp
src/Graphics/: AGraphicalModule.cpp  AGraphicalModule.hpp  IGraphicalModule.hpp
src/Graphics/Ncurses/: Main.cpp  NcursesGraphicalModule.cpp  NcursesWrapper.cpp  NcursesWrapper.hpp
src/Graphics/SDL2/: Main.cpp  SDL2Wrapper.cpp  Sdl2GraphicalModule.cpp
src/Graphics/SFML/: Main.cpp  SfmlGraphicalModule.cpp
src/globalClasses/: Tiles.cpp
